base/auth/auth-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: auth-service             
  namespace: microservice
spec:
  type: NodePort
  selector:
    app: auth-microservice                
  ports:
    - protocol: TCP
      port: 80               
      targetPort: 3000
